# tokio-tui

./: .gitignore  Cargo.toml  README.md
examples/: tui-console.rs  tui-form.rs  tui-scroll.rs  tui-status.rs  tui-tabbed.rs  tui-tracer-multi.rs  tui-tracer.rs
examples/example-data/: cargo.ansi  ipsum.txt
proc-macro/: Cargo.toml
proc-macro/src/: lib.rs
src/: lib.rs  tui_theme.rs
src/tui/: input_backend.rs  mod.rs  mode_layout.rs  tui_app.rs
src/widgets/: mod.rs
src/widgets/button/: button_widget.rs  mod.rs
src/widgets/form/: form_data.rs  form_widget.rs  mod.rs
src/widgets/form/form_fields/: form_field.rs  list_field.rs  mod.rs  select_field.rs  subform_field.rs  subform_list_field.rs  text_field.rs
src/widgets/input/: command_set.rs  input_widget.rs  mod.rs
src/widgets/scrollbox/: mod.rs  parse_ansi.rs  scrollbox_widget.rs  tabbed_scrollbox.rs
src/widgets/status/: line_builder.rs  mod.rs  status_line.rs  status_update.rs  status_widget.rs
src/widgets/status/status_cells/: eta_status.rs  file_size_status.rs  icon_status.rs  mod.rs  progress_status.rs  text_status.rs  timer_status.rs
src/widgets/tabs/: mod.rs  tabs_widget.rs
src/widgets/tracer/: console_widget.rs  mod.rs  tracer_form.rs  tracer_widget.rs
