[package]
name = "tokio-tui"
version = "0.1.0"
edition = "2024"
authors = ["nobane"]
repository = "https://github.com/nobane/tokio-tui"
license = "MIT"
description = "Ratatui widgets built around using tokio"
readme = "README.md"




[dependencies]
tokio-tui-macro = { path = "./proc-macro", version = "0.1.0" }

ansi-parser = "0.9.1"
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.18", features = ["derive", "string"] }
clipboard = "0.5.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = { version = "0.3.31", features = ["async-await", "compat"] }
itertools = "0.14.0"
rand = { version = "0.8.5", features = ["log", "serde"] }
ratatui = { version = "0.29.0", features = ["macros", "serde", "all-widgets"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tokio-tracer = { version = "0.1.1" }
tokio-util = "0.7.15"
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["v4"] }

