
[package]
name = "tokio-tui-macro"
version = "0.1.0"
edition = "2024"
authors = ["nobane"]
repository = "https://github.com/nobane/tokio-tui"
license = "MIT"
description = "Proc macro for tokio-tui"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0", features = ["full", "extra-traits"] }

